# deep-research-agent

./: .env.example  .gitignore  Makefile  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
eval/: benchmark_profiles.py  freeze_benchmark.py  harness.py  measure_replay_latency.py  measure_verifier_fpr.py  replay.py  scoring.py  summarize_results.py  tasks.json
eval/replay/: README.md
eval/results/: FIRST_TIMESTAMPED_RUN.md  README.md  result_template.json.example
notebooks/: analysis.ipynb  langgraph_architecture.ipynb
scripts/: compare_architectures.py
src/agent/: __init__.py  models.py  pipeline.py  planner.py  searcher.py  synthesizer.py  verifier.py
src/agent_langgraph/: __init__.py  graph.py  memory.py
tests/: test_core_behavior.py  test_eval_summary.py  test_eval_workflows.py  test_langgraph_architecture.py  test_offline_eval.py  test_summarize_modes.py
